crates/solidity/testing/snapshots/bindings_output/contracts/public_getter_selector/v2/generated/0.4.21-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
   ╭─[input.sol:6:26]
   │
 6 │     uint public override x;
   │                          ┬  
   │                          ╰── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (5):
- Def: #1 ["Face" @ input.sol:1:11] (interface)
- Def: #2 ["x" @ input.sol:2:14] (function, type: function () returns uint256)
- Def: #3 ["Test" @ input.sol:5:10] (contract)
- Def: #4 ["override" @ input.sol:6:17] (state var, type: uint256)
- Def: #5 ["test" @ input.sol:8:14] (function, type: function () returns void)

------------------------------------------------------------------------

References (3):
- Ref: ["Face" @ input.sol:5:18] -> #1
- Ref: ["x" @ input.sol:9:14] -> #2
- Ref: ["selector" @ input.sol:9:16] -> built-in

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ interface Face {
   │           ──┬─  
   │             ╰─── name: 1
 2 │     function x() external view returns (uint);
   │              ┬  
   │              ╰── name: 2
   │ 
 5 │ contract Test is Face {
   │          ──┬─    ──┬─  
   │            ╰─────────── name: 3
   │                    │   
   │                    ╰─── ref: 1
 6 │     uint public override x;
   │                 ────┬───  
   │                     ╰───── name: 4
   │ 
 8 │     function test() internal {
   │              ──┬─  
   │                ╰─── name: 5
 9 │         this.x.selector;
   │              ┬ ────┬───  
   │              ╰─────────── ref: 2
   │                    │     
   │                    ╰───── built-in
───╯
